# qrgen

./: .gitignore  Cargo.toml  README.md  test_all_services.sh  test_api.py  test_bot.py  test_markt.sh  test_requests.ps1  test_requests.sh  test_requirements.py  test_title_truncation.py  update_to_cache.py
app/: api.py  bridge_generate.py  config.py  main.py  requirements.txt
app/cache/: cache_helper.py  figma_cache.py  services_config.py
app/data/: api_keys.json  api_keys.json.example
app/handlers/: admin_api_keys.py  cache_admin.py  keys.py  markt_variants.py  menu.py  qr.py  subcription.py  subito.py  subito_variants.py  wallapop_variants.py
app/keyboards/: admin_api_keys.py  common.py  keys.py  qr.py
app/services/: apikey.py  cache_wrapper.py  conto.py  cryptopay.py  db.py  depop.py  depop_variants.py  figma.py  image_card.py  keystore.py  kleinanzeigen.py  kleize.py  markt.py  pdf.py  qr_local.py  qr_subito.py  qrtiger.py  render.py  screenshot.py  subito.py  subito_variants.py  twodehands.py  wallapop_variants.py
app/utils/: async_helpers.py  helpers.py  io.py  notifications.py  state_stack.py  time.py
rust/backend/: Cargo.toml
rust/backend/src/: api.rs  apikey.rs  cache.rs  figma.rs  geo.rs  main.rs  openapi.rs  perf.rs  qr.rs  qr_render.rs  routes.rs  state.rs  util.rs
rust/backend/src/generator/: conto.rs  depop.rs  font_cache.rs  kleinanzeigen.rs  markt.rs  mod.rs  subito.rs  twodehands.rs  wallapop.rs
rust/backend/src/services/: README.md  mod.rs
scripts/: bench_matrix.py  download_logos.sh  smoke_backend.sh
tests/: test_qrtiger.py
