[package]
name = "qrgen-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "process", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# image/qr
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
hex = "0.4"
base64 = "0.22"

# text/fonts/time/decimal
rusttype = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
urlencoding = "2"

# randomness for "unique" variants (ported from python)
rand = "0.8"
rand_distr = "0.4"

# for API key file parsing
parking_lot = "0.12"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
