[package]
name = "qrgen-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
parking_lot = "0.12"
dotenvy = "0.15"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# image/qr stack (generators will use these)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
